--- a/package.json
+++ b/package.json
@@ -108,6 +108,6 @@
     "transform": {
       "^.+\\.(ts|tsx)$": "<rootDir>/scripts/jest.preprocessor.js"
     },
-    "testRegex": "/src/.*\\.spec\\.(ts|tsx|js)$"
+    "testRegex": "/Users/adam/git/stencil/src/renderer/vdom/test/ssr.spec.ts"
   }
 }
